# custom-allocator-cpp

./: .gitignore  CMakeLists.txt  README.md
demo/: main.cpp
include/: BumpAllocator.hpp
src/: BumpAllocator.cpp
